--- a/pages/eom_3_unit/eom_3_mini_game/styles/style-popup.css
+++ b/pages/eom_3_unit/eom_3_mini_game/styles/style-popup.css
@@ -625,6 +625,15 @@ input[type='checkbox']:checked {
     cursor: default;
     margin: 5px !important;
 }
+.custom-input-keyboard input[type=text] {
+    text-align: center;
+    margin-top: 5px;
+    font-size: 15px;
+    border-radius: 1vh;
+    border: 0.1vw solid #000;
+    padding: 5% 2%;
+    min-width: 22vh;
+}
 .question_type_3_dropped{
     padding: 1vh;
     font-weight: 500;
@@ -906,6 +915,8 @@ input[type='checkbox']:checked {
     min-width: 50px !important;
     width: 100% !important;
     height: 100%;
+    max-width: 200px;
+    max-height: 200px;
 }
 #result_corrects_num{
     display: flex;
