--- a/pages/eom_2_unit/custom_page/3/style.css
+++ b/pages/eom_2_unit/custom_page/3/style.css
@@ -38,8 +38,8 @@ h3{
     margin-bottom: 15px;
 }
 p{
-    text-align: justify;
-    text-indent: 4%;
+    text-align: left;
+    text-indent: 0%;
     margin-bottom: 15px;
 }
 ul li{
