--- a/pages/eom_2_unit/custom_page/7/style.css
+++ b/pages/eom_2_unit/custom_page/7/style.css
@@ -37,7 +37,7 @@ h3{
     margin-bottom: 15px;
 }
 p{
-    text-align: justify;
+    text-align: left;
     text-indent: 0%;
     margin-bottom: 15px;
 }
