--- a/pages/eom_3_unit/eom_3_test/styles/main.css
+++ b/pages/eom_3_unit/eom_3_test/styles/main.css
@@ -41,8 +41,8 @@ footer {
     z-index: 500;
 }
 p{
-    text-align: justify;
-    text-indent: 4%;
+    text-align: left;
+    text-indent: 0%;
     margin-bottom: 25px;
     font-size: clamp(18px, 1.5vw, 25px);
     margin-left: 25px;
